--- a/services/session-upload/.vscode/launch.json
+++ b/services/session-upload/.vscode/launch.json
@@ -14,7 +14,8 @@
             ],
             "envFile": "${workspaceFolder}/../../.env",
             "env": {
-                "MINIO_ENDPOINT": "localhost:9000"
+                "MINIO_ENDPOINT": "localhost:9000",
+                "RABBITMQ_HOST": "localhost:5672"
             },
             "jinja": true,
             "justMyCode": true
