--- a/services/audio-extractor/pyproject.toml
+++ b/services/audio-extractor/pyproject.toml
@@ -5,7 +5,7 @@ description = "Default template for PDM package"
 authors = [
     {name = "MatanRN", email = "matan.rn@outlook.com"},
 ]
-dependencies = ["minio>=7.2.20", "pika>=1.3.2", "ddtrace>=4.0.0", "python-json-logger>=4.0.0"]
+dependencies = ["minio>=7.2.20", "pika>=1.3.2", "ddtrace>=4.0.0", "python-json-logger>=4.0.0", "moviepy>=2.2.1"]
 requires-python = "==3.13.*"
 readme = "README.md"
 license = {text = "MIT"}
