--- a/services/session-upload/pyproject.toml
+++ b/services/session-upload/pyproject.toml
@@ -5,7 +5,7 @@ description = "Default template for PDM package"
 authors = [
     {name = "MatanRN", email = "matan.rn@outlook.com"},
 ]
-dependencies = ["fastapi[standard]>=0.122.0", "minio>=7.2.20", "pika>=1.3.2", "ddtrace>=4.0.0", "python-json-logger>=4.0.0"]
+dependencies = ["fastapi[standard]>=0.122.0", "minio>=7.2.20", "pika>=1.3.2", "ddtrace>=4.0.0", "python-json-logger>=4.0.0", "psychology-common @ file:///${PROJECT_ROOT}/../common"]
 requires-python = "==3.13.*"
 readme = "README.md"
 license = {text = "MIT"}
