--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,35 @@ services:
         condition: service_started
       session-upload:
         condition: service_started
+  audio-transcriber:
+    build:
+      context: .
+      dockerfile: ./services/audio-transcriber/Dockerfile
+    container_name: audio-transcriber
+    environment:
+      - MINIO_USER=${MINIO_USER}
+      - MINIO_PASSWORD=${MINIO_PASSWORD}
+      - MINIO_ENDPOINT=minio:9000
+      - RABBITMQ_HOST=rabbitmq
+      - RABBITMQ_USER=${RABBITMQ_USER}
+      - RABBITMQ_PASSWORD=${RABBITMQ_PASSWORD}
+      - ASSEMBLYAI_API_KEY=${ASSEMBLYAI_API_KEY}
+      - DD_AGENT_HOST=datadog       # Send traces to the agent container
+      - DD_SERVICE=audio-transcriber   # Name of service in DD Dashboard
+      - DD_LOGS_INJECTION=true
+    networks:
+      - analyzer-network
+    labels:
+      com.datadoghq.ad.logs: '[{"source": "python", "service": "audio-transcriber"}]'
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
+      minio:
+        condition: service_started
+      audio-extractor:
+        condition: service_started
+      session-upload:
+        condition: service_started
   rabbitmq:
     image: rabbitmq:4.2.1-management-alpine
     container_name: rabbitmq
