--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -80,6 +80,32 @@ services:
         condition: service_started
       session-upload:
         condition: service_started
+  transcript-analyzer:
+    build:
+      context: .
+      dockerfile: ./services/transcript-analyzer/Dockerfile
+    container_name: transcript-analyzer
+    environment:
+      - MINIO_USER=${MINIO_USER}
+      - MINIO_PASSWORD=${MINIO_PASSWORD}
+      - MINIO_ENDPOINT=minio:9000
+      - RABBITMQ_HOST=rabbitmq
+      - RABBITMQ_USER=${RABBITMQ_USER}
+      - RABBITMQ_PASSWORD=${RABBITMQ_PASSWORD}
+      - REDIS_HOST=redis
+      - GEMINI_API_KEY=${GEMINI_API_KEY}
+      - DD_AGENT_HOST=datadog       # Send traces to the agent container
+      - DD_SERVICE=transcript-analyzer   # Name of service in DD Dashboard
+      - DD_LOGS_INJECTION=true
+    networks:
+      - analyzer-network
+    labels:
+      com.datadoghq.ad.logs: '[{"source": "python", "service": "transcript-analyzer"}]'
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
+      minio:
+        condition: service_started
   rabbitmq:
     image: rabbitmq:4.2.1-management-alpine
     container_name: rabbitmq
