--- a/services/common/pyproject.toml
+++ b/services/common/pyproject.toml
@@ -7,6 +7,8 @@ authors = [
 ]
 dependencies = [
     "python-json-logger>=4.0.0",
+    "sqlmodel>=0.0.27",
+    "psycopg[binary]>=3.2.0",
 ]
 requires-python = "==3.13.*"
 readme = "README.md"
