Refactor Session Upload to raise appropriate HTTPExceptions in the case of missing patient name, invalid date or file content type

--- a/services/session-upload/.vscode/launch.json
+++ b/services/session-upload/.vscode/launch.json
@@ -15,7 +15,7 @@
             "envFile": "${workspaceFolder}/../../.env",
             "env": {
                 "MINIO_ENDPOINT": "localhost:9000",
-                "RABBITMQ_HOST": "localhost:5672"
+                "RABBITMQ_HOST": "localhost"
             },
             "jinja": true,
             "justMyCode": true
