Refactor audio transcription by breaking monolith function into utility functions for audio retrieval, saving, and transcription.

--- a/services/audio-transcriber/Dockerfile
+++ b/services/audio-transcriber/Dockerfile
@@ -17,6 +17,7 @@ RUN sed -i 's|\${PROJECT_ROOT}/..|/app/services|g' pyproject.toml
 # Install common package explicitly
 RUN pip install .
 
+COPY services/audio-transcriber/utils.py .
 COPY services/audio-transcriber/main.py .
 
 ENTRYPOINT ["python", "main.py"]
