Update Dockerfile to copy additional service files and maintain project structure following recent refactor

--- a/services/audio-transcriber/Dockerfile
+++ b/services/audio-transcriber/Dockerfile
@@ -17,7 +17,13 @@ RUN sed -i 's|\${PROJECT_ROOT}/..|/app/services|g' pyproject.toml
 # Install common package explicitly
 RUN pip install .
 
-COPY services/audio-transcriber/utils.py .
+COPY services/audio-transcriber/config.py .
+COPY services/audio-transcriber/dependencies.py .
+COPY services/audio-transcriber/exceptions.py .
+COPY services/audio-transcriber/worker.py .
 COPY services/audio-transcriber/main.py .
+COPY services/audio-transcriber/domain domain/
+COPY services/audio-transcriber/infrastructure infrastructure/
+COPY services/audio-transcriber/handlers handlers/
 
 ENTRYPOINT ["python", "main.py"]
