--- a/services/common/pyproject.toml
+++ b/services/common/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "python-json-logger>=4.0.0",
     "sqlmodel>=0.0.27",
     "psycopg[binary]>=3.2.0",
+    "pydantic>=2.0.0",
 ]
 requires-python = "==3.13.*"
 readme = "README.md"
@@ -20,4 +21,3 @@ build-backend = "pdm.backend"
 
 [tool.pdm]
 distribution = true
-
